--- a/charts/jiva-w/1.0/templates/ingress.yaml
+++ b/charts/jiva-w/1.0/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: ingress
 spec:
   rules:
-  {{- if .Values.jivaw.enabled }}
+  {{- if .Values.loadBalancer.jivaw.enabled }}
   - host: {{ .Release.Namespace }}-jivaw{{ .Values.loadBalancer.dns }}
     http:
       paths:
@@ -13,6 +13,15 @@ spec:
           serviceName: jiva-w
           servicePort: 9990
         path: /mge
+  {{- end }}
+  {{- if .Values.loadBalancer.datasync.enabled }}
+  - host: {{ .Release.Namespace }}-datasync{{ .Values.loadBalancer.dns }}
+    http:
+      paths:
+      - backend:
+          serviceName: datasync
+          servicePort: 9980
+        path: /datasync.html
   {{- end }}
 status:
   loadBalancer: {}
