--- a/charts/jiva-w/1.0/questions.yml
+++ b/charts/jiva-w/1.0/questions.yml
@@ -110,6 +110,14 @@ questions:
   required: true
   group: "Outras Aplicações"
 
+- variable: esocial.enabled
+  label: "Cliente possui Esocial?"
+  description: "Caso seja marcado true irá subir um container com o SanESocial"
+  type: boolean
+  default: false
+  required: true
+  group: "Outras Aplicações"
+
 # Load Balancer
 - variable: loadBalancer.jivaw.enabled
   label: "Definir hostname do Jivaw para o loadBalancer"
@@ -124,6 +132,15 @@ questions:
   description: "Definir hostname do DataSync para o loadBalancer"
   type: boolean
   show_if: "datasync.enabled=true"
+  default: false
+  required: true
+  group: "Load Balancing"
+
+- variable: loadBalancer.esocial.enabled
+  label: "Definir hostname do Esocial para o loadBalancer"
+  description: "Definir hostname do Esocial para o loadBalancer"
+  type: boolean
+  show_if: "esocial.enabled=true"
   default: false
   required: true
   group: "Load Balancing"
