--- a/charts/sankhya-w/1.0/templates/sankhya-w-deployment.yaml
+++ b/charts/sankhya-w/1.0/templates/sankhya-w-deployment.yaml
@@ -69,7 +69,7 @@ spec:
         - name: USUARIO_BD_SNKW
           value: "{{ .Values.banco.usuario }}"
         image: {{  .Values.imageRepository.sankhyaw.image }}:{{  .Values.imageRepository.sankhyaw.imageTag }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: sankhya-w
         livenessProbe:
           failureThreshold: 3
