--- a/charts/jiva-w/2.0/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/2.0/templates/jiva-w-deployment.yaml
@@ -29,7 +29,7 @@ spec:
           /home/mgeweb/repositorio /home/mgeweb/pacotes-sannfe/ && /home/mgeweb/DPM/scripts/./wildfly.sh
           ; java -jar /home/mgeweb/DPM/docker-package-manager.jar ; /home/mgeweb/DPM/scripts/./sannfe.sh;
           sudo chown -R mgeweb:mgeweb /home/mgeweb/SanNFe /home/mgeweb/wildfly_producao/standalone/log
-          && /home/mgeweb/DPM/scripts/./visualvm.sh && sleep 10  && sed -i 's/<min-pool-size>100</<min-pool-size>10</g'
+          && /home/mgeweb/DPM/scripts/./visualvm.sh && sleep 10  && sed -i 's/<min-pool-size>100</<min-pool-size>10</g' && 
           /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i
           's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml
           && sleep 30 ; /home/mgeweb/wildfly_producao/bin/./standalone.sh
@@ -73,7 +73,7 @@ spec:
               name: jiva-w
               key: banco-user 
         image: {{  .Values.imageRepository.jivaw.image }}:{{  .Values.imageRepository.jivaw.imageTag }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: jiva-w
         livenessProbe:
           failureThreshold: 3
