--- a/charts/jiva-w/2.0/templates/ingress.yaml
+++ b/charts/jiva-w/2.0/templates/ingress.yaml
@@ -6,6 +6,12 @@ metadata:
   name: ingress
 spec:
   rules:
+  - host: sas.{{ .Release.Namespace }}{{ .Values.loadBalancer.dns }}
+    http:
+      paths:
+      - backend:
+          serviceName: sas
+          servicePort: 10050
   {{- if .Values.loadBalancer.jivaw.enabled }}
   - host: {{ .Release.Namespace }}{{ .Values.loadBalancer.dns }}
     http:
