--- a/charts/jiva-w/2.0/templates/sas-deployment.yaml
+++ b/charts/jiva-w/2.0/templates/sas-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: sas
-        image: {{  .Values.imageRepository.sas.image }}:v1.5
+        image: {{  .Values.imageRepository.sas.image }}:{{  .Values.imageRepository.sas.imageTag }}
         imagePullPolicy: IfNotPresent
         command: ["/bin/sh", "-c"]
         args:
