--- a/charts/jiva-w/2.0/questions.yml
+++ b/charts/jiva-w/2.0/questions.yml
@@ -100,6 +100,14 @@ questions:
   group: "Configurando Memoria da Aplicação"
 
 # Outras Aplicações
+- variable: sasdelphi.enabled
+  label: "Cliente possui Delphi?"
+  description: "Caso seja marcado true o container do SAS não irá atualizar o parâmetro IPSERVACESS"
+  type: boolean
+  default: false
+  required: true
+  group: "Outras Aplicações"
+
 - variable: datasync.enabled
   label: "Cliente possui Datasync?"
   description: "Caso seja marcado true irá subir um container para o Data Sync"
