--- a/charts/jiva-w/0.vcpu/templates/jiva-w-deployment.yaml
+++ b/charts/jiva-w/0.vcpu/templates/jiva-w-deployment.yaml
@@ -104,7 +104,7 @@ spec:
             cpu:  {{ .Values.cpu.jivaw.maximo }}
           requests:
             memory: {{ .Values.memoria.jivaw.media }}Mi
-            cpu: {{ .Values.cpu.jivaw.media }}m
+            cpu: {{ .Values.cpu.jivaw.media }}
         securityContext:
           allowPrivilegeEscalation: true
           capabilities: {}
